--- a/web/index.html
+++ b/web/index.html
@@ -12,13 +12,21 @@
     <script>
         var _state = {}
         var _socket = undefined
-        function createSpeaker(info) {
-            let user = users[info.name.toLowerCase()]!==undefined?users[info.name.toLowerCase()]:users["_default"]
-            console.log("user", info, user)
-            let customClass = (user.class !== undefined)?user.class:""
 
+        function userInfo(name) {
+            let user = users[name.toLowerCase()]
+            if(user===undefined) {
+                user = users["_default"]
+                user['id'] = "_default_"+Date.now()
+            }
+            return user
+        }
+
+        function createSpeaker(info) {
+            let user = userInfo(info.name)
+            let customClass = (user.class !== undefined)?user.class:""
             $('.container').append(
-                `<div id="speaker-${info.name}" class="user-container fadein ${info.name} ${customClass}">
+                `<div id="speaker-${user.id}" class="user-container fadein ${info.name} ${customClass}">
                     <div class="avatar" style="background-image: url('${user.avatar}')"></div>
                     <div class="username-container">
                         <div class="username">${user.name}</div>
@@ -26,14 +34,18 @@
                 </div>`
             )
         }
-        function getSpeakerContainer(name) {
-            return $('.container #speaker-'+name)
-        }
+
         function destroySpeaker(info) {
             let container = getSpeakerContainer(info.name)
             container.removeClass("fadein").addClass("fadeout")
             setTimeout(()=>{container.remove()}, 1100)
         }
+
+        function getSpeakerContainer(name) {
+            let user = userInfo(name)
+            return $('.container #speaker-'+user.id)
+        }
+
         function newJoin(name) {
             if(_state[name] === undefined) {
                 console.log(name, "joined")
@@ -66,7 +78,6 @@
 
             u.is_speaking = false
             console.log(name, "stopped speaking")
-
             let container = getSpeakerContainer(name)
             container.removeClass("active")
         }
